Closed Bug 1266680 Opened 8 years ago Closed 8 years ago

Cloned MediaStreamTracks only stop after all clones and the original have been stopped

Categories

(Core :: Audio/Video: MediaStreamGraph, defect)

48 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla48
Tracking Status
firefox48 --- verified

People

(Reporter: pehrsons, Assigned: pehrsons)

References

()

Details

Attachments

(2 files)

Reproduction:
1. See the jsfiddle in the URL
2. Click "gUM me up!"
3. Click "Clone it 100 times!"
4. Click "Stop cloned track" or "Stop original track"

Expected:
Playback of the track for which the stop button was clicked should stop.

Actual:
Playback continues until the other track is also stopped.
It wasn't clear which TrackID should be passed to MediaInputPort::BlockTrackId(); source or destination.

Review commit: https://reviewboard.mozilla.org/r/48493/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/48493/
Attachment #8744365 - Flags: review?(rjesup)
Attachment #8744366 - Flags: review?(jib)
Attachment #8744365 - Flags: review?(rjesup) → review+
Comment on attachment 8744365 [details]
MozReview Request: Bug 1266680 - Rename BlockTrackId to BlockSourceTrackId. r?jesup

https://reviewboard.mozilla.org/r/48493/#review45195
Comment on attachment 8744366 [details]
MozReview Request: Bug 1266680 - Fix stopping MediaStreamTrack when there are clones. r?jib

https://reviewboard.mozilla.org/r/48495/#review45265
Attachment #8744366 - Flags: review?(jib) → review+
Assignee: nobody → pehrsons
Status: NEW → ASSIGNED
https://hg.mozilla.org/mozilla-central/rev/308b40b4502b
https://hg.mozilla.org/mozilla-central/rev/d6d6a9495b77
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Flags: qe-verify+
I have reproduced the steps in the description using Firefox Nightly 48.0a1 (20160420030213) on Windows 10 x64, Ubuntu 14.04 x64 and OSX 10.11. 
The issue is VERIFIED as FIXED on the same OS's in Firefox Beta 48.0b2 (20160620091522).
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: